# microgrid_device_kit

./: .gitignore  .pylintrc  README.md  __init__.py  adevice.py  basedevice.py  blobdevice.py  build.sh  cdevice.py  cdevice2.py  dev.sh  device.py  deviceset.py  functions.py  gdevice.py  idevice.py  idevice2.py  mfdeviceset.py  poly2d.py  pvdevice.py  pyproject.toml  requirements.txt  run.py  sdevice.py  setup.cfg  setup.py  solve.py  tdevice.py  udevice.py  utils.py  vldevice.py  windowdevice.py
.github/workflows/: publish.yml
device_kit/: __init__.py  __main__.py  adevice.py  basedevice.py  cdevice.py  cdevice2.py  device.py  deviceset.py  functions.py  gdevice.py  idevice.py  idevice2.py  mfdeviceset.py  plots.py  pvdevice.py  run.py  sdevice.py  solve.py  subbalanceddeviceset.py  tdevice.py  tworatiomfdeviceset.py  utils.py  windowdevice.py
device_kit/loaders/: __init__.py  builder_loader.py  module_loader.py
device_kit/sample_scenarios/: README.md  aircons_only_x10_scenario.py  ev_charge_scenario.py  iload_storage_supply.py
device_kit/sample_scenarios/lcl/: lcl_greedy_agent_scenario.py  lcl_scenario.py  lcl_scenario_fixed_price_network.py  lcl_scenario_no_battery.py  lcl_scenario_prosumers_1.py  lcl_tv_is_not_schedulable_scenario.py
device_kit/sample_scenarios/mf/: chp_simple.py
docs/: instantaneous-device-utility-curve-analysis.md
projection/: __init__.py  projection.py
sample_scenarios/: ev_charge_scenario.py
sample_scenarios/lcl/: lcl_scenario_no_battery.py  lcl_scenario_prosumers_1.py
sample_scenarios/mf/: chp_simple.py
sample_scenarios/single_device/: dispersion_penalty_test.py  sdevice_in_deviceset_scenario.py
sample_scenarios/single_home/: single_home_blob.py
scripts/: synopsis.py
tests/: test_all.py  test_device.py  test_device_utils.py  test_deviceset.py  test_functions.py  test_projection.py
tests-inf/: synopsis.py  tdevice_break_me.py  test_device.py  test_deviceagent.py  test_mf.py  test_tdevice.py  test_tdevice_more.py
tests/test-scripts/: test_device.py  test_mf.py  test_tdevice.py  test_tdevice_more.py
tests/visual-tests/: gdevice.py  idevice.py  idevice2.py
(+15 files in other folders)
