[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "device_kit"
version = "1.0.6"
authors = [
  { name="Sam Pinkus", email="sgpinkus@gmail.com" },
]
maintainers = [
  { name="Sam Pinkus", email="sgpinkus@gmail.com" },
]
description = "Flow device economical optimization modeling kit"
readme = "README.md"
requires-python = ">=3.9.2"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["microgrid", "day-ahead", "simulation", "modeling"]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "numdifftools==0.9.41",
]
[project.optional-dependencies]
gui = ["PyQt5"]
run = [
  "matplotlib>=3.5",
  "pandas>=2.2"
]

[project.urls]
Homepage = "https://github.com/sgpinkus/device_kit"
Issues = "https://github.com/sgpinkus/device_kit/issues"

[tool.setuptools]
packages = ["device_kit", "device_kit.sample_scenarios", "device_kit.projection", "device_kit.loaders"]

